--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -24,38 +24,36 @@
 
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Фрукты и ягоды"
-                android:id="@+id/name_of_category"
-                android:textColor="#000000"
-                android:fontFamily="sans-serif-black"
-                android:textSize="25dp"
-                android:layout_marginBottom="8dp"
-                android:layout_alignBottom="@+id/count_of_products"
-                android:layout_centerHorizontal="true"
-                android:gravity="left|center_vertical" />
-
-            <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="23 продукта"
                 android:id="@+id/count_of_products"
                 android:textColor="#606060"
                 android:textSize="12dp"
-                android:layout_marginTop="19dp"
-                android:layout_below="@+id/image_of_category"
-                android:layout_centerHorizontal="true" />
+                android:layout_alignParentBottom="true"
+                android:gravity="center"/>
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/image_of_category"
-                android:src="@android:drawable/checkbox_off_background"
-                android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:src="@android:drawable/star_big_off"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="50dp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="Фрукты и ягоды"
+                android:id="@+id/name_of_category"
+                android:textColor="#000000"
+                android:fontFamily="sans-serif-black"
+                android:textSize="25sp"
+                android:layout_above="@id/count_of_products"
+                android:gravity="center_horizontal"
+                />
         </RelativeLayout>
 
         <RelativeLayout
