--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -35,10 +35,10 @@
                 android:gravity="center"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="62dp"
+                android:layout_height="62dp"
                 android:id="@+id/image_of_category"
-                android:src="@android:drawable/star_big_off"
+                android:src="@drawable/meat_x2"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp" />
 
