--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -35,10 +35,10 @@
                 android:gravity="center"/>
 
             <ImageView
-                android:layout_width="62dp"
-                android:layout_height="62dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/image_of_category"
-                android:src="@drawable/meat_x2"
+                android:src="@drawable/meat"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp" />
 
@@ -50,7 +50,7 @@
                 android:id="@+id/name_of_category"
                 android:textColor="#000000"
                 android:fontFamily="sans-serif-black"
-                android:textSize="25sp"
+                android:textSize="23sp"
                 android:layout_above="@id/count_of_products"
                 android:gravity="center_horizontal"
                 />
