--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -18,6 +18,9 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+
             android:layout_height="170dp"
             android:id="@+id/name_count_image"
             android:background="#f0f0f0">
@@ -46,11 +49,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Фрукты и ягоды"
+                android:text="Молочные продукты"
                 android:id="@+id/name_of_category"
                 android:textColor="#000000"
                 android:fontFamily="sans-serif-black"
-                android:textSize="25sp"
+                android:textSize="19sp"
                 android:layout_above="@id/count_of_products"
                 android:gravity="center_horizontal"
                 />
@@ -66,18 +69,19 @@
 
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="Петрушка, укроп, хмель..."
-                android:id="@+id/textView11"
+                android:id="@+id/category_example"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true"
+                android:focusable="false"
                 android:textColor="#bdbdbd"
                 android:fontFamily="sans-serif-condensed"
+                android:gravity="center_horizontal"
                 android:textSize="12dp" />
         </RelativeLayout>
     </LinearLayout>
 
 
-</android.support.v7.widget.CardView>
+</android.support.v7.widget.CardView >
