--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -35,7 +35,8 @@
                 android:textColor="#606060"
                 android:textSize="12dp"
                 android:layout_alignParentBottom="true"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:layout_marginBottom="20dp" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -43,7 +44,7 @@
                 android:id="@+id/image_of_category"
                 android:src="@drawable/meat"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="50dp" />
+                android:layout_marginTop="30dp" />
 
             <TextView
                 android:layout_width="match_parent"
