Cards of available recipes almost ready
but images for them are not))

--- a/app/src/main/res/layout/card_material_recipe.xml
+++ b/app/src/main/res/layout/card_material_recipe.xml
@@ -43,6 +43,7 @@
                 android:textSize="25dp"
                 android:text="Roast beef"
                 android:visibility="visible"
+                android:singleLine="true"
                 android:layout_marginLeft="14dp"
                 android:layout_marginStart="21dp"
                 android:layout_alignParentBottom="true"
