--- a/app/src/main/res/layout/card_material_recipe_time.xml
+++ b/app/src/main/res/layout/card_material_recipe_time.xml
@@ -25,5 +25,6 @@
         android:textColor="#434343"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp" />
+        android:layout_marginTop="55dp"
+        android:id="@+id/measure_for_time_tv" />
 </RelativeLayout>
