--- a/app/src/main/res/layout/card_material_recipe.xml
+++ b/app/src/main/res/layout/card_material_recipe.xml
@@ -40,7 +40,7 @@
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:id="@+id/avlRcpNameTV"
                 android:gravity="left"
-                android:textSize="25dp"
+                android:textSize="25sp"
                 android:text="Roast beef"
                 android:visibility="visible"
                 android:singleLine="true"
@@ -48,6 +48,7 @@
                 android:layout_marginStart="21dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:textColor="@color/white"
                 android:focusableInTouchMode="false"
                 android:fontFamily="sans-serif-condensed" />
@@ -66,6 +67,7 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:layout_marginBottom="40dp">
 
                 <RelativeLayout
@@ -87,6 +89,7 @@
                     android:layout_height="match_parent"
 
                     android:layout_alignParentEnd="true"
+                    android:layout_alignParentRight="true"
                     android:layout_weight="1">
 
                     <include
@@ -128,7 +131,7 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
 
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textColor="@color/black"
                 android:layout_alignTop="@+id/preview"
                 android:layout_marginRight="25dp"
@@ -143,10 +146,11 @@
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
 
-                android:textSize="14dp"
+                android:textSize="14sp"
                 android:textColor="@color/primaryDark"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
                 android:layout_marginBottom="12dp"
                 android:layout_marginLeft="25dp"
                 android:visibility="visible" />
@@ -158,7 +162,8 @@
                 android:id="@+id/view"
                 android:layout_marginBottom="40dp"
                 android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"/>
 
         </RelativeLayout>
 
