--- a/app/src/main/res/layout/fragment_gridview_categories.xml
+++ b/app/src/main/res/layout/fragment_gridview_categories.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/white">
 
     <GridView
         android:id="@+id/categoryGridView"
@@ -13,6 +14,5 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="5dp"
-
-        />
+        android:background="@color/white"/>
 </LinearLayout>
