--- a/app/src/main/res/layout/fragment_gridview_recipes.xml
+++ b/app/src/main/res/layout/fragment_gridview_recipes.xml
@@ -13,6 +13,6 @@
         android:numColumns="auto_fit"
         android:stretchMode="columnWidth"
         android:verticalSpacing="5dp"
-        
+        android:background="@color/white"
         />
 </LinearLayout>
