--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <android.support.v7.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/start_button" >
+        android:id="@+id/start_button"
+        app:cardBackgroundColor="@color/docPanelsColors">
 
         <RelativeLayout
             android:layout_width="wrap_content"
@@ -49,6 +50,7 @@
                 android:textSize="30dp"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_toEndOf="@+id/numOfRecipesTV"
+                android:layout_toRightOf="@+id/numOfRecipesTV"
                 android:layout_marginTop="16dp" />
 
             <TextView
@@ -60,6 +62,7 @@
                 android:textSize="30dp"
                 android:fontFamily="sans-serif-condensed"
                 android:layout_toEndOf="@+id/numOfRecipesTV"
+                android:layout_toRightOf="@+id/numOfRecipesTV"
                 android:layout_marginTop="45dp" />
 
             <ImageView
@@ -68,6 +71,7 @@
                 android:id="@+id/imageView2"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
                 android:src="@drawable/ic_keyboard_arrow_right_white_24dp" />
 
         </RelativeLayout>
