--- a/app/src/main/res/layout/navdrawer_item_with_separator.xml
+++ b/app/src/main/res/layout/navdrawer_item_with_separator.xml
@@ -22,7 +22,9 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="0dp"
         android:layout_centerVertical="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"/>
+
     <TextView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -42,7 +44,8 @@
         android:paddingBottom="16dp"
         android:paddingLeft="25dp"
         android:id="@+id/navdrawer_name_of_item"
-        android:layout_toEndOf="@+id/navdrawer_item_icon" />
+        android:layout_toEndOf="@+id/navdrawer_item_icon"
+        android:layout_toRightOf="@id/navdrawer_item_icon"/>
 
 </RelativeLayout>
 
