--- a/app/src/main/res/layout/card_material_category.xml
+++ b/app/src/main/res/layout/card_material_category.xml
@@ -43,7 +43,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/image_of_category"
-                android:src="@drawable/meat"
+                android:src="@drawable/meat_photo"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="30dp" />
 
