--- a/app/src/main/res/layout/go_cook_button.xml
+++ b/app/src/main/res/layout/go_cook_button.xml
@@ -7,7 +7,7 @@
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:orientation="vertical"
-    card_view:cardBackgroundColor="#FF9800"
+    card_view:cardBackgroundColor="#EF6C00"
     card_view:cardCornerRadius="5dp">
 
     <RelativeLayout
