--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -207,4 +207,146 @@
 	<item>При подаче на стол посыпать сверху зеленью петрушки или укропом.</item>
 </string-array>
 
+<string-array name="salad_with_smetana">
+	<item>Обмытый и отсушенный зеленый салат нарезать и сложить в миску. </item>
+	<item>Яйца, сваренные вкрутую, нарезать тонкими ломтиками и смешать с соусом из сметаны с уксусом. </item>
+	<item>Перед самой подачей к столу заправить салат сметанным соусом с яйцом, уложить в салатник, обложить кружочками свежих огурцов и посыпать мелко нарезанным укропом или зеленью петрушки. Подается салат ко всем мясным и рыбным блюдам.</item>
+</string-array>
+
+<string-array name="salad_with_oil">
+	<item>Обмытый и отсушенный зеленый салат нарезать поперек листьев и сложить в салатник. </item>
+	<item>Перед подачей на стол полить приготовленным соусом из уксуса и растительного масла, перемешать и посыпать укропом или зеленью петрушки. </item>
+	<item>Можно прибавить свежие огурцы, нарезанные кружочками, а также корочки белого хлеба, натертые чесноком и нарезанные в виде маленьких ромбов и уложенные поверх салата. Подают салат ко всем блюдам из жареного и вареного мяса, а также к жареной рыбе.</item>
+</string-array>
+
+<string-array name="salad_health">
+	<item>Обмытые свежие огурцы, сырую морковь и яблоки нарезать тонкой соломкой, а листики салата на 3–4 части каждый. </item>
+	<item>Все это перемешать и заправить сметаной, добавив лимонный сок, соль, сахар. </item>
+	<item>Сверху салат украсить помидорами, нарезанными ломтиками. Такой салат, благодаря сырым овощам и фруктам, содержит значительное количество витаминов.</item>
+</string-array>
+
+<string-array name="salad_with_cucumbers">
+	<item>Вымытые и очищенные огурцы нарезать тонкими ломтиками, уложить в салатник. </item>
+	<item>Перед самой подачей к столу огурцы слегка посолить, посыпать перцем и полить сметаной, смешанной с солью и уксусом. </item>
+	<item>Сверху посыпать укропом. Подают салат к мясным и рыбным котлетам, к жареному мясу и рыбе или как самостоятельное блюдо.</item>
+</string-array>
+
+<string-array name="salad_with_redis">
+	<item>Редиску промыть и нарезать тонкими ломтиками.</item>
+	<item>Желток сваренного вкрутую яйца растереть в миске, добавив сметану и соль.</item>
+	<item>После этого положить редиску, добавить тонко нарезанный белок яйца и перемешать.</item>
+</string-array>
+
+<string-array name="salad_with_tomatos_and_cucum">
+	<item>Вымытые помидоры и свежие огурцы нарезать тонкими кружочками, посыпать солью и перцем и красиво уложить в салатник.</item>
+	<item> К моменту подачи на стол полить уксусом, смешанным с растительным маслом, сверху посыпать укропом или зеленью петрушки.</item>
+	<item>Салат можно приготовить из одних огурцов или из одних помидоров. Свежие помидоры можно заменить консервированными. В этот салат по желанию добавляют репчатый лук, нарезанный тонкими кольцами, или мелко нарезанный зеленый лук. Подают салат к мясным и рыбным котлетам, к вареному или жареному мясу и рыбе, а также как отдельное блюдо.</item>
+</string-array>
+
+<string-array name="salad_with_svekla">
+	<item>Сварить или испечь в духовом шкафу свеклу, очистить ее, нарезать соломкой, сложить в миску, посолить, посыпать перцем, прибавить масло, уксус, перемешать и уложить в салатник. </item>
+	<item>Сверху посыпать укропом или зеленью петрушки. Подается салат к жареному и вареному мясу. </item>
+	<item>Салат из свеклы можно приготовить и с картофелем. В этом случае свеклы и картофеля взять поровну.</item>
+</string-array>
+
+<string-array name="salad_kartof">
+	<item>Сваренный картофель очистить от кожуры, нарезать ломтиками, сложить в миску, посолить, посыпать перцем, смешать с уксусом и растительным маслом. </item>
+	<item>Затем положить горкой в салатник и посыпать укропом, зеленью петрушки или мелко нарезанным зеленым луком. </item>
+	<item>Подается салат к горячему и холодному жареному мясу, телятине, баранине, свинине и рыбе, а также как отдельное блюдо. Особенно вкусен этот салат, если он приготовлен из свежесваренного теплого картофеля.</item>
+</string-array>
+
+	<string-array name="salat_iz_krasnokach_kapusti">
+		<item>Очистить и обмыть кочан красной капусты, разрезать на четвертинки, вырезать кочерыжку и очень тонко нашинковать острым ножом или на шинковке. </item>
+		<item>Потом капусту сложить в кастрюлю, обдать крутым кипятком, накрыть крышкой, дать постоять 20–30 минут, откинуть на сито или дуршлаг; затем облить холодной водой, отжать, сложить в салатник, залить уксусом, посолить, положить сахар, перемешать и дать постоять 20–30 минут. </item>
+		<item>В капусту можно прибавить столовую ложку растительного масла. Капусту для этого салата можно не обдавать кипятком, а посыпать солью и перетирать руками до тех пор, пока капуста не станет мягкой и не начнет выделять темный сок; тогда ее нужно отжать и залить уксусом, добавить сахар и перемешать. </item>
+		<item>Через несколько минут капуста примет яркую окраску. Этот салат подают к мясу, дичи, домашней птице и рыбе.</item>
+	</string-array>
+
+
+	<string-array name="salat_iz_belokach_kap_s_yablokami">
+	<item>Очищенные яблоки нарезать ломтиками, сельдерей нарезать соломкой длиной 4–5 см.</item>
+	<item>Очистить и обмыть кочан капусты, удалить кочерыжку, тонко нашинковать, слегка посолить и перетереть руками, чтобы капуста стала мягкой.</item>
+	<item>Выделяющийся сок отжать. После этого капусту положить в салатник, залить уксусом, смешанным с сахаром, и в таком виде оставить на 30–40 минут. В капусту хорошо прибавить 1 ст. ложку растительного масла.</item>
+	<item>Очищенные яблоки нарезать ломтиками, сельдерей нарезать соломкой длиной 4–5 см; белокочанную капусту подготовить так же, как указано выше; все это перемешать, сложить в салатник, прибавить сахар и полить уксусом.</item>
+	<item> Этот салат подают ко всем жареным и вареным мясным блюдам, к жареной и отварной рыбе, на гарнир к холодным мясным и рыбным блюдам, а также как самостоятельное блюдо.</item>
+</string-array>
+
+<string-array name="salat_iz_kvash_kapusti">
+	<item>Квашеную капусту смешать с сахаром и растительным маслом</item>
+	<item>Можно прибавить свежие или моченые яблоки, нарезанные ломтиками, салатный сельдерей, бруснику свежую или моченую. Подают этот салат к сосискам, сарделькам, жареной свинине, отварной домашней птице.</item>
+</string-array>
+
+<string-array name="salat_vesna">
+	<item>Вымытые фрукты — яблоки, груши, апельсины, мандарины — очистить от кожицы, нарезать дольками (без зерен и сердцевины) и сложить в миску. К моменту подачи на стол фрукты посыпать сахарной пудрой и, слегка посолив, смешать с соусом майонез и лимонным соком. </item>
+	<item>Затем все это сложить горкой в салатник и посыпать цедрой с апельсина, нарезанной очень тонкой соломкой. </item>
+	<item>Украсить салат можно теми же фруктами, а также вареным черносливом, виноградом и ягодами. В зависимости от сезона, фрукты можно подобрать различные (персики, абрикосы, сваренную айву, а также ягоды — землянику, клубнику и др.), но обязательно в сочетании с яблоками. </item>
+	<item>Подается салат к холодному жареному или вареному мясу, телятине, баранине, птице или дичи, а также как самостоятельное блюдо.</item>
+</string-array>
+
+<string-array name="salat_iz_myasa">
+	<item>Мясо вареное или жареное, очищенный вареный картофель и огурцы нарезать ломтиками, сложить в миску, добавив соус майонез, соль и уксус.</item>
+	<item>Все это перемешать, сложить в салатник в виде горки и украсить листиками салата, нарезанными огурцами и кусочками мяса.</item>
+</string-array>
+
+<string-array name="salat_s_kolbasoy">
+	<item>Нарезать зеленый салат. Колбасу или ветчину, картофель, сельдерей, яблоки и корнишоны нарезать ломтиками, сложить в миску.</item>
+	<item>Соус майонез смешать с небольшим количеством горчицы, мелко нарезанной зеленью петрушки и эстрагоном, прибавить уксус и посолить по вкусу.</item>
+	<item>Заправить подготовленные продукты соусом, уложить в салатник и, при желании, украсить сверху ломтиками вареной свеклы, яблока и кольцами лука.</item>
+</string-array>
+
+<string-array name="salat_iz_treski_s_hrenom">
+	<item>Сваренную холодную треску нарезать кусочками. Очищенный картофель и огурцы нарезать ломтиками.</item>
+	<item>В миску положить натертый хрен, добавить соус майонез, соль, уксус, смешать с нарезанной рыбой, картофелем, огурцами и переложить в салатник. </item>
+	<item>Салат украсить кусочками огурца, мелко нарезанным зеленым луком, натертым хреном и ветками зелени петрушки.</item>
+</string-array>
+
+<string-array name="salat_iz_treski_s_mayonezom">
+	<item>Сельдерей, редиску, огурцы и яблоки нарезать соломкой длиной 3–4 см, сложить в миску и поставить в холодное место. </item>
+	<item>Сваренную охлажденную рыбу без кожи и костей нарезать на куски по числу порций, сложить в тарелку, облить уксусом и также поставить в холодное место. </item>
+	<item>Перед тем как подать к столу, овощи слегка посолить, смешать с 2–3 ст. ложками соуса майонез и уложить на листики салата, отсушенного на салфетке; поверх овощей положить куски рыбы и залить оставшимся майонезом. Можно разнообразить вкус салата, изменив набор овощей.</item>
+</string-array>
+
+<string-array name="salat_iz_seldi">
+	<item>Очищенную сельдь нарезать кусочками, а овощи и яблоки — тонкими ломтиками. </item>
+	<item>Приготовить соус; для этого желток сваренного вкрутую яйца растереть с солью, горчицей и маслом, причем масло надо подливать небольшими порциями, чтобы соус получился густой. Потом прибавить уксус. </item>
+	<item>Перед подачей на стол нарезанные продукты смешать с соусом и мелко нарезанным луком и зеленью петрушки или укропом. </item>
+	<item>Салат поместить в салатник и украсить ломтиками свеклы, сельди и яичным белком.</item>
+</string-array>
+
+<string-array name="salat_iz_fasoli">
+	<item>Фасоль, предварительно замоченную, сварить, откинуть на сито и охладить. Одновременно отварить морковь и нарезать кубиками, а очищенный сельдерей тонко нашинковать соломкой.</item>
+	<item>Прибавить промытый, нарезанный зеленый салат и все это перемешать. Затем положить в салатник горчицу, соль, сахар, все это растереть, постепенно подливая растительное масло, а затем и уксус.</item>
+	<item>Подготовленные продукты положить в салатник, перемешать, сделать из них горку и украсить ее листьями салата, морковью и, по желанию, ломтиками яблок.</item>
+</string-array>
+
+<string-array name="vinegret_iz_ovoschey">
+	<item>Вареный картофель, яблоки, огурцы, морковь очистить, нарезать ломтиками, кубиками или соломкой, сложить в миску, прибавить квашеную шинкованную капусту. </item>
+	<item>Горчицу, соль, перец, сахар растереть с маслом и развести уксусом. Перед тем как подать к столу, овощи смешать с приготовленным соусом, уложить в салатник, украсить ломтиками свеклы, посыпать зеленым луком и укропом. </item>
+	<item>Можно украсить винегрет также свежими огурцами и помидорами. Винегрет получается более вкусным, если его заправить соусом майонез.</item>
+</string-array>
+
+<string-array name="vinegret_iz_fruktov_i_ovoshey">
+	<item>Очищенные яблоки, груши, картофель, морковь, огурцы нарезать тонкими ломтиками, сложить в миску, прибавить горошек, нарезанный сельдерей и листики зелени петрушки.</item>
+	<item> При подаче на стол продукты слегка посолить, посыпать сахаром и смешать с соусом майонез и лимонным соком. Винегрет сложить в салатник, украсить ломтиками апельсина, дольками мандарина и зеленым салатом.</item>
+</string-array>
+
+<string-array name="salat_iz_pertsa_s_kartofelem">
+	<item>Очищенные картофель и сваренное вкрутую яйцо нарезать тонкими ломтиками, сложить в миску, прибавить перец, нарезанный на части, посолить, перемешать и поместить горкой в салатник.</item>
+	<item>Горку обложить кантиком из мелко нарезанного лука, украсить дольками яйца и посыпать укропом</item>
+</string-array>
+
+<string-array name="salat_iz_krasnohack_kapusti">
+	<item>Половинку некрупного кочана краснокочанной капусты нашинковать.</item>
+	<item>Обжарить на растительном масле, помешивая, без крышки, до мягкости. Посолить и поперчить капусту. Остудить.</item>
+	<item>Чеснок очистить и измельчить (я натираю на терке). Смешать капусту с йогуртом и чесноком.</item>
+	<item>Добавить лимонный сок и, при необходимости, еще соли.</item>
+	<item>И вот уже на столе отличный зимний салатик. Благодаря тому, что капусту мы немного притушили, он не требует трудоемкого разжевывания. Чеснок с лимоном придает приятную пикантность.</item>
+</string-array>
+
+<string-array name="salat_morsk_kapusta_izumitelniy">
+	<item>Открыть банку с морской капустой, слить воду.</item>
+	<item>Нарезать луковицу мелкими кубиками, нарезать кубиками чернослив. Измельчить орехи.</item>
+	<item>Соединить все ингредиенты. Заправить майонезом (сметаной).  Подавать, украсив по усмотрению. Приятного аппетита!</item>
+</string-array>
+
 </resources>
